--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Created by .ignore support plugin (hsz.mobi)
 ### VisualStudioCode template
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# !.vscode/settings.json
+# !.vscode/tasks.json
+# !.vscode/launch.json
+# !.vscode/extensions.json
 
 
 ### IntelliJ template
@@ -76,3 +76,5 @@ _book
 *.epub
 *.mobi
 *.pdf
+
+### Project files
